--- a/dnsproxy.conf
+++ b/dnsproxy.conf
@@ -1,5 +1,5 @@
 #
-# dnsproxy 1.15 configuration file example
+# dnsproxy 1.16 configuration file example
 #
 
 #
@@ -35,3 +35,8 @@ internal 192.168.168.0/24	# Our internal network
 internal 192.168.169.0/24	# Friendly neighbours
 internal 127.0.0.1
 
+#
+# DNS query filtering (default off)
+#
+
+# allowed-query en.wikipedia.org
