--- a/dnsproxy.conf
+++ b/dnsproxy.conf
@@ -40,3 +40,8 @@ internal 127.0.0.1
 #
 
 # allowed-query en.wikipedia.org
+
+#
+# static-answer (reply the assigned ip on domain name matched)
+#
+# static-answer license.cc 8.8.8.8
